@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-04-03T00:58:50Z",
+  "count" : 3,
+  "count_minmax" : [ 3, 3 ],
+  "count_prev_day_inc" : 0,
+  "count_prev_day_dec" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_prev_day_inc" : 0,
+  "uniques_prev_day_dec" : 0
+}
