@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-31T00:54:55Z",
+  "timestamp" : "2022-04-03T00:58:50Z",
   "count_outdated" : 101,
   "uniques_outdated" : 18,
-  "count" : 131,
-  "uniques" : 27,
+  "count" : 134,
+  "uniques" : 28,
   "views" : [
     {
       "timestamp": "2022-03-20T00:00:00Z",
@@ -44,6 +44,13 @@
       "timestamp": "2022-03-30T00:00:00Z",
       "count": 5,
       "count_minmax": [ 5, 5 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-02T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
