@@ -1,5 +1,5 @@
 {
-  "count": 30,
+  "count": 33,
   "uniques": 7,
   "views": [
     {
@@ -30,6 +30,11 @@
     {
       "timestamp": "2022-03-30T00:00:00Z",
       "count": 5,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-02T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
