@@ -1,3 +1,9 @@
+2022-04-03T00:58:50Z:
+* notice: last 14d: all unq: 33 7
+* notice: prev accum: outdated-all outdated-unq / all unq: 101 18 / 131 27
+* notice: next accum: outdated-all outdated-unq / all unq: 101 18 / 134 28
+* notice: prev json diff // prev day diff: unq all: +1 +3 / -0 -0 // +1 +3 / -0 -0
+
 2022-03-31T00:54:55Z:
 * notice: last 14d: all unq: 30 7
 * notice: prev accum: outdated-all outdated-unq / all unq: 101 18 / 126 26
